--- a/Shikhai/Views/Categories/Details.cshtml
+++ b/Shikhai/Views/Categories/Details.cshtml
@@ -32,8 +32,8 @@
         </dt>
 
         <dd>
-            @Html.TextAreaFor(m => m.Description, new { @class = "form-control summernote" })
-            @*@Html.DisplayFor(model => model.Description)*@
+            @*@Html.TextAreaFor(m => m.Description, new { @class = "form-control summernote" })*@
+            @Html.DisplayFor(model => model.Description)
         </dd>
 
         <dt>
