--- a/Shikhai/Views/ClassNames/Details.cshtml
+++ b/Shikhai/Views/ClassNames/Details.cshtml
@@ -17,6 +17,23 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @*@Html.TextAreaFor(m => m.Description, new { @class = "form-control summernote" })*@
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DisplayOrder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DisplayOrder)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
