--- a/Shikhai/Views/Customers/Index.cshtml
+++ b/Shikhai/Views/Customers/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model List<Shikhai.Models.ApplicationUser>
 
 
-@{
+@{   
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
