--- a/Shikhai/Views/Home/About.cshtml
+++ b/Shikhai/Views/Home/About.cshtml
@@ -1,4 +1,9 @@
 ﻿
+@{
+    ViewBag.Title = "About";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <link href="~/Content/about.css" rel="stylesheet" />
 
 
@@ -156,7 +161,7 @@
     <div class="col-lg-3 col-md-6">
         <div class="portlet light">
             <div class="photo">
-          
+
                 <img src="~/Content/users/teambg1.jpg" alt="" class="img-responsive" />
             </div>
             <div class="title">
