--- a/Shikhai/Views/Home/Howwork.cshtml
+++ b/Shikhai/Views/Home/Howwork.cshtml
@@ -1,4 +1,10 @@
-﻿<main id="tg-main" class="tg-main tg-haslayout" style="background-color:white;">
+﻿
+@{
+    ViewBag.Title = "How Work";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<main id="tg-main" class="tg-main tg-haslayout" style="background-color:white;">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
@@ -43,7 +49,7 @@
                     <div class="col-sm-12">
                         <div class="tg-feature">
                             <div class="pull-left img_wrap">
-         
+
                                 <img src="~/Content/superior/images/icon2.png" />
                             </div>
                             <div class="pull-left desc">
@@ -57,7 +63,7 @@
                     <div class="col-sm-12">
                         <div class="tg-feature">
                             <div class="pull-left img_wrap">
-                              
+
                                 <img src="~/Content/superior/images/icon3.png" />
                             </div>
                             <div class="pull-left desc">
