--- a/Shikhai/Views/Home/WhyUs.cshtml
+++ b/Shikhai/Views/Home/WhyUs.cshtml
@@ -1,4 +1,10 @@
-﻿<main id="tg-main" class="tg-main tg-haslayout"  style="background-color:white;">
+﻿@{
+    ViewBag.Title = "Why Us";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+<main id="tg-main" class="tg-main tg-haslayout" style="background-color:white;">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
