--- a/Shikhai/Views/Manage/AddPhoneNumber.cshtml
+++ b/Shikhai/Views/Manage/AddPhoneNumber.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Shikhai.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Add Phone Number";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
