--- a/Shikhai/Views/RolesAdmin/Details.cshtml
+++ b/Shikhai/Views/RolesAdmin/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 
-@{
+@{  ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
