--- a/Shikhai/Views/RolesAdmin/Index.cshtml
+++ b/Shikhai/Views/RolesAdmin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 
-@{
+@{  ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
