--- a/Shikhai/Views/Shared/_Layout.cshtml
+++ b/Shikhai/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     </div>
     <div id="content">
-        <div class="container body-content" style="background-color:#fff">
+        <div class="container body-content " style="background-color:#fff;    width: 60%;">
             @Html.Partial("_TopMenu")
             @RenderBody()
             @Html.Partial("_Footer")
