--- a/Shikhai/Views/Shared/_TopMenu.cshtml
+++ b/Shikhai/Views/Shared/_TopMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="menu-banner">
     <div class="menubar">
         <div class="col-md-12">
-            <header style="z-index:9999;">
+            <header style="z-index:9999;     width: 103%; margin-left: -14px;">
                 <nav id='cssmenu'>
 
                     <div id="head-mobile"></div>
