--- a/Shikhai/Views/Stationaries/Index.cshtml
+++ b/Shikhai/Views/Stationaries/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Shikhai.Models.Product>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Stationaries";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
