--- a/Shikhai/Views/Tutors/Index.cshtml
+++ b/Shikhai/Views/Tutors/Index.cshtml
@@ -1,4 +1,10 @@
-﻿<main id="tg-main" class="tg-main tg-haslayout" >
+﻿
+@{
+    ViewBag.Title = "Tutors";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<main id="tg-main" class="tg-main tg-haslayout">
     <div class="container">
         <div class="row">
             <div id="tg-content" class="tg-content">
