--- a/Shikhai/Views/ClassNames/Create.cshtml
+++ b/Shikhai/Views/ClassNames/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Shikhai.Models.ClassName
 
 @{
-    ViewBag.Title = "Create"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Create</h2>
@@ -22,7 +23,16 @@
         </div>
     </div>
 
+    <div class="form-group">
+        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
 
+            @Html.TextAreaFor(m => m.Description, new { @class = "form-control summernote" })
+
+            @*@Html.EditorFor(model => model.Description, new { htmlAttributes = new { style = "height:80px;", @class = "form-control summernote" } })*@
+            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(model => model.DisplayOrder, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
