--- a/Shikhai/Views/Home/Contact.cshtml
+++ b/Shikhai/Views/Home/Contact.cshtml
@@ -1,4 +1,10 @@
-﻿<link href="~/Content/metronic/css/contact.css" rel="stylesheet" />
+﻿
+@{
+    ViewBag.Title = "Contact";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<link href="~/Content/metronic/css/contact.css" rel="stylesheet" />
 <style>
     .c-content-feedback-1 > .row > div form .input-group {
         width: 327px;
