--- a/Shikhai/Views/Locations/Details.cshtml
+++ b/Shikhai/Views/Locations/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Shikhai.Models.Location
 
 @{
-    ViewBag.Title = "Details"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Details</h2>
@@ -17,7 +18,23 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
 
+        <dd>
+            @*@Html.TextAreaFor(m => m.Description, new { @class = "form-control summernote" })*@
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DisplayOrder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DisplayOrder)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
         </dt>
