--- a/Shikhai/Views/Manage/ChangePassword.cshtml
+++ b/Shikhai/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Shikhai.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
