--- a/Shikhai/Views/Manage/Index.cshtml
+++ b/Shikhai/Views/Manage/Index.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNet.Identity
 @{
     ViewBag.Title = "Manage your account";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
