--- a/Shikhai/Views/RolesAdmin/Create.cshtml
+++ b/Shikhai/Views/RolesAdmin/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Shikhai.Models.RoleViewModel
 
 
-@{   
+@{     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
