--- a/Shikhai/Views/RolesAdmin/Delete.cshtml
+++ b/Shikhai/Views/RolesAdmin/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
-@{
+@{  ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
