--- a/Shikhai/Views/Testimonials/Create.cshtml
+++ b/Shikhai/Views/Testimonials/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Shikhai.Models.Testimonial
 
 @{
-    ViewBag.Title = "Create"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Create</h2>
