--- a/Shikhai/Views/Testimonials/Delete.cshtml
+++ b/Shikhai/Views/Testimonials/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Shikhai.Models.Testimonial
 
 @{
-    ViewBag.Title = "Delete"; Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <h2>Delete</h2>
