--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -33,7 +33,7 @@
 </div>
 
 <section class="tg-main-section tg-haslayout tg-parallaximg home_page_header_image_section mainslideshow-height" data-appear-top-offset="600" data-parallax="scroll"
-         data-image-src="~/Content/images/ShikhaiImages/children.jpg" style="height: 817px;">
+         data-image-src="/Content/images/ShikhaiImages/children.jpg" style="height: 817px;">
 
     <div class="homepage_slider mobilehide" style="position: relative;">
         <img src="/Content/images/ShikhaiImages/pic-01.jpg" class="cycle-slide cycle-sentinel" style="position: static; top: 0px; left: 0px; z-index: 100; opacity: 1;
