--- a/Shikhai/Views/Teachers/Create.cshtml
+++ b/Shikhai/Views/Teachers/Create.cshtml
@@ -104,7 +104,7 @@
                 @Html.LabelFor(m => m.SelectedVisitDays, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
                     <div class="input-group ">
-                        @Html.ListBoxFor(model => model.SelectedVisitDays, Model.CanVisitDays, new { @id = "mySkills" })
+                        @Html.ListBoxFor(model => model.SelectedVisitDays, Model.CanVisitDays, new { @class = "mySkills" })
                     </div>
                 </div>
             </div>
