--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -153,7 +153,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $(function () {
-            $('#mySkills').multiselect({
+            $('.mySkills').multiselect({
                 includeSelectAllOption: true
             });
         });
