--- a/Shikhai/Views/Shared/_Layout.cshtml
+++ b/Shikhai/Views/Shared/_Layout.cshtml
@@ -8,13 +8,13 @@
 
 
 <body class="demo">
-    <div id="loader-wrapper">
+   
+    @*<div id="loader-wrapper">
         <div id="loader"></div>
-
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
+    </div>*@
 
-    </div>
     <div id="content">
         <div class="container body-content " style="background-color:#fff;    width: 60%;">
             @Html.Partial("_TopMenu")
