--- a/Shikhai/Views/Shared/_LayoutAdmin.cshtml
+++ b/Shikhai/Views/Shared/_LayoutAdmin.cshtml
@@ -6,13 +6,13 @@
 </head>
 <body class="page-header-fixed page-sidebar-closed-hide-logo page-content-white demo">
 
-    <div id="loader-wrapper">
+    @*<div id="loader-wrapper">
         <div id="loader"></div>
-
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
+    </div>*@
 
-    </div>
+
     <div id="content">
         <div class="page-wrapper">
             @Html.Partial("_TopMenuAdmin")
