--- a/Shikhai/Views/Shared/_LayoutFooter.cshtml
+++ b/Shikhai/Views/Shared/_LayoutFooter.cshtml
@@ -56,9 +56,10 @@
 </script>
 
 @*editor*@
-<link href="https://summernote.org/vendors/summernote/dist/summernote.css" rel="stylesheet">
-<script src="https://summernote.org/vendors/summernote/dist/summernote.js"></script>
-<script src="https://summernote.org/vendors/summernote/lang/summernote-ko-KR.js"></script>
+
+<link href="~/Content/summernote/summernote.css" rel="stylesheet" />
+<script src="~/Content/summernote/summernote.js"></script>
+<script src="~/Content/summernote/summernote-ko-KR.js"></script>
 <script>
     $('.summernote').summernote({
         height: 600,
@@ -138,34 +139,31 @@
 @*superior js*@
 
 
+<script src="~/Content/superior/markerclusterer.min.js"></script>
 
-<script src="https://www.superiorlearning.ca/assets/front/js/mapclustering/markerclusterer.min.js"></script>
-
-<script src="https://www.superiorlearning.ca/assets/front/js/mapclustering/map.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/customScrollbar.min.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/jquery.countdown.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/simplyscroll.min.js"></script>
-
-<script src="https://www.superiorlearning.ca/assets/front/js/chosen.jquery.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/jquery-ui.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/parallax.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/countTo.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/cycle2.min.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/loader.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/form.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/checkbox.min.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/appear.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/gmap3.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/alertify.min.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/accordion.min.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/jquery.form.min.js"></script>
+<script src="~/Content/superior/customScrollbar.min.js"></script>
+<script src="~/Content/superior/jquery.countdown.js"></script>
+<script src="~/Content/superior/simplyscroll.min.js"></script>
+<script src="~/Content/superior/chosen.jquery.js"></script>
+<script src="~/Content/superior/jquery-ui.js"></script>
+<script src="~/Content/superior/parallax.js"></script>
+<script src="~/Content/superior/countTo.js"></script>
+<script src="~/Content/superior/cycle2.min.js"></script>
+<script src="~/Content/superior/loader.js"></script>
+<script src="~/Content/superior/form.js"></script>
+<script src="~/Content/superior/checkbox.min.js"></script>
+<script src="~/Content/superior/appear.js"></script>
+<script src="~/Content/superior/gmap3.js"></script>
+<script src="~/Content/superior/alertify.min.js"></script>
+<script src="~/Content/superior/accordion.min.js"></script>
+<script src="~/Content/superior/jquery.form.min.js"></script>
 
 <script src="~/Scripts/main14.js"></script>
-<script src="https://www.superiorlearning.ca/assets/front/js/wickedpicker.min.js"></script>
+<script src="~/Content/superior/wickedpicker.min.js"></script>
 
 
 @*testimonial*@
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
+<script type="text/javascript" src="~/Content/superior/owl.carousel.min.js"></script>
 <script>
 
     $(document).ready(function () {
