--- a/Shikhai/Views/Catalog/_ProductsPortfolio.cshtml
+++ b/Shikhai/Views/Catalog/_ProductsPortfolio.cshtml
@@ -32,7 +32,7 @@
         }
 
         <div class="cbp-item books">
-            <a href="Books/SearchAll/" class="cbp-caption cbp-lightbox" data-title="Search All">
+            <a href="Books/SearchAll/" class="cbp-caption" data-title="Search All">
                 <div class="col-md-3" style="min-height:60px;">
                     <div style="background-color:#376285;margin:2px;min-height:60px; min-width:270px;">
                         <h3 style="color:white !important; text-align:center; vertical-align:central;padding-top: 18px;"> View All Books</h3>
@@ -56,7 +56,7 @@
             </div>
         }
         <div class="cbp-item Stationaries">
-            <a href="Stationaries/SearchAll/" class="cbp-caption cbp-lightbox" data-title="Search All">
+            <a href="Stationaries/SearchAll/" class="cbp-caption " data-title="Search All">
                 <div class="col-md-3" style="min-height:60px;">
                     <div style="background-color:#376285;margin:2px;min-height:60px; min-width:270px;">
                         <h3 style="color:white !important; text-align:center; vertical-align:central;padding-top: 18px;"> View All Stationaries</h3>
