--- a/Shikhai/Views/Shared/_LayoutFooter.cshtml
+++ b/Shikhai/Views/Shared/_LayoutFooter.cshtml
@@ -138,32 +138,32 @@
 
 @*superior js*@
 
-
-<script src="~/Content/superior/markerclusterer.min.js"></script>
-
-<script src="~/Content/superior/customScrollbar.min.js"></script>
-<script src="~/Content/superior/jquery.countdown.js"></script>
-<script src="~/Content/superior/simplyscroll.min.js"></script>
-<script src="~/Content/superior/chosen.jquery.js"></script>
-<script src="~/Content/superior/jquery-ui.js"></script>
-<script src="~/Content/superior/parallax.js"></script>
-<script src="~/Content/superior/countTo.js"></script>
-<script src="~/Content/superior/cycle2.min.js"></script>
-<script src="~/Content/superior/loader.js"></script>
-<script src="~/Content/superior/form.js"></script>
-<script src="~/Content/superior/checkbox.min.js"></script>
-<script src="~/Content/superior/appear.js"></script>
-<script src="~/Content/superior/gmap3.js"></script>
-<script src="~/Content/superior/alertify.min.js"></script>
-<script src="~/Content/superior/accordion.min.js"></script>
-<script src="~/Content/superior/jquery.form.min.js"></script>
+<script src="~/Content/superior/js/markerclusterer.min.js"></script>
+<script src="~/Content/superior/js/markerclusterer.min.js"></script>
+<script src="~/Content/superior/js/customScrollbar.min.js"></script>
+<script src="~/Content/superior/js/jquery.countdown.js"></script>
+<script src="~/Content/superior/js/simplyscroll.min.js"></script>
+<script src="~/Content/superior/js/chosen.jquery.js"></script>
+<script src="~/Content/superior/js/jquery-ui.js"></script>
+<script src="~/Content/superior/js/parallax.js"></script>
+<script src="~/Content/superior/js/countTo.js"></script>
+<script src="~/Content/superior/js/cycle2.min.js"></script>
+<script src="~/Content/superior/js/loader.js"></script>
+<script src="~/Content/superior/js/form.js"></script>
+<script src="~/Content/superior/js/checkbox.min.js"></script>
+<script src="~/Content/superior/js/appear.js"></script>
+<script src="~/Content/superior/js/gmap3.js"></script>
+<script src="~/Content/superior/js/alertify.min.js"></script>
+<script src="~/Content/superior/js/accordion.min.js"></script>
+<script src="~/Content/superior/js/jquery.form.min.js"></script>
 
 <script src="~/Scripts/main14.js"></script>
-<script src="~/Content/superior/wickedpicker.min.js"></script>
 
+<script src="~/Content/superior/js/wickedpicker.min.js"></script>
 
 @*testimonial*@
-<script type="text/javascript" src="~/Content/superior/owl.carousel.min.js"></script>
+
+<script src="~/Content/superior/js/owl.carousel.min.js"></script>
 <script>
 
     $(document).ready(function () {
