--- a/Shikhai/Views/Account/RegisterTeacher.cshtml
+++ b/Shikhai/Views/Account/RegisterTeacher.cshtml
@@ -1,6 +1,8 @@
 ﻿@model Shikhai.Models.RegisterTeacher
 @{
-    ViewBag.Title = "Register";
+                /**/
+
+                ViewBag.Title = "Register";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -19,195 +21,200 @@
 
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+        </div>
+    </div>
+
+
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.ClinicHospitalName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.ClinicHospitalName, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ClinicHospitalName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Designation, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Designation, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Designation, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Degree, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Degree, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Degree, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.YearOfExperience, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.YearOfExperience, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.YearOfExperience, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.Addresss, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Addresss, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Addresss, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control datetime" } })
+            @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.SelectedTeachClass, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <div class="input-group ">
+                @Html.ListBoxFor(model => model.SelectedTeachClass, Model.CanTeachClass, new { @class = "mySkills" })
+            </div>
+        </div>
+    </div>
+    @*dropdown*@
+    <div class="form-group">
+        @Html.LabelFor(m => m.SelectedLocationId, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.SelectedLocationId, Model.AllLocationSelectListItems.OrderBy(x => x.Text), "---Select Location---", new { @class = "form-control" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.SelectedCategoryId, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <div class="input-group ">
+                @Html.ListBoxFor(model => model.SelectedCategoryId, Model.AllCategorySelectListItems, new { @class = "mySkills" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.SelectedSubject, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <div class="input-group ">
+                @Html.ListBoxFor(model => model.SelectedSubject, Model.CanTeachSubject, new { @class = "mySkills" })
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.SelectedVisitDays, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            <div class="input-group ">
+                @Html.ListBoxFor(model => model.SelectedVisitDays, Model.CanVisitDays, new { @class = "mySkills" })
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.VisitTimeStart, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.VisitTimeStart, new { htmlAttributes = new { @Value = "09:00", id = "timeclock-a", @class = "form-control timeclock" } })
+            <button type="button" id="button-a">Check the  minutes</button>
+            <button type="button" id="button-b">Check the  hours</button>
+            @Html.ValidationMessageFor(model => model.VisitTimeStart, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.VisitTimeEnd, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.VisitTimeEnd, new { htmlAttributes = new { @Value = "23:00", id = "timeclock-b", @class = "form-control timeclock" } })
+            <button type="button" id="button-c">Check the  minutes</button>
+            <button type="button" id="button-d">Check the  hours</button>
+            @Html.ValidationMessageFor(model => model.VisitTimeEnd, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TutionPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TutionPrice, new { htmlAttributes = new { @Value = "500", @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TutionPrice, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SlotDuration, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SlotDuration, new { htmlAttributes = new { @Value = "60", @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SlotDuration, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="form-group">
+            @Html.LabelFor(model => model.VisitingCard, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.Partial("_SingleFiles")
+                @Html.HiddenFor(model => model.VisitingCard)
+                <script>
+                    function preupload(event) {
+                        event.preventDefault();
+                        var files = $("#fileinput")[0].files;
+
+                        var url = '/Teachers/Upload';
+                        var imagepath = $("#VisitingCard");
+                        upload(files, url, imagepath);
+                    }
+                    function preclearfile(event) {
+                        var imagepath = $("#VisitingCard");
+                        clearfile(imagepath);
+                    }
+                </script>
+            </div>
+        </div>
+    </div>
     
-        <div class="form-group">
-            @Html.LabelFor(model => model.FullName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FullName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-
-
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ClinicHospitalName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ClinicHospitalName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ClinicHospitalName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Designation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Designation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Designation, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.YearOfExperience, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.YearOfExperience, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.YearOfExperience, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Addresss, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Addresss, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Addresss, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DateOfBirth, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfBirth, new { htmlAttributes = new { @class = "form-control datetime" } })
-                @Html.ValidationMessageFor(model => model.DateOfBirth, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedTeachClass, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div class="input-group ">
-                    @Html.ListBoxFor(model => model.SelectedTeachClass, Model.CanTeachClass, new { @class = "mySkills" })
-                </div>
-            </div>
-        </div>
-        @*dropdown*@
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedLocationId, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.SelectedLocationId, Model.AllLocationSelectListItems.OrderBy(x => x.Text), "---Select Location---", new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedCategoryId, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div class="input-group ">
-                    @Html.ListBoxFor(model => model.SelectedCategoryId, Model.AllCategorySelectListItems, new { @class = "mySkills" })
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedSubject, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div class="input-group ">
-                    @Html.ListBoxFor(model => model.SelectedSubject, Model.CanTeachSubject, new { @class = "mySkills" })
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.SelectedVisitDays, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div class="input-group ">
-                    @Html.ListBoxFor(model => model.SelectedVisitDays, Model.CanVisitDays, new { @class = "mySkills" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.VisitTimeStart, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.VisitTimeStart, new { htmlAttributes = new { @Value = "09:00", id = "timeclock-a", @class = "form-control timeclock" } })
-                <button type="button" id="button-a">Check the  minutes</button>
-                <button type="button" id="button-b">Check the  hours</button>
-                @Html.ValidationMessageFor(model => model.VisitTimeStart, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.VisitTimeEnd, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.VisitTimeEnd, new { htmlAttributes = new { @Value = "23:00", id = "timeclock-b", @class = "form-control timeclock" } })
-                <button type="button" id="button-c">Check the  minutes</button>
-                <button type="button" id="button-d">Check the  hours</button>
-                @Html.ValidationMessageFor(model => model.VisitTimeEnd, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.TutionPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TutionPrice, new { htmlAttributes = new { @Value = "500", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TutionPrice, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.SlotDuration, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SlotDuration, new { htmlAttributes = new { @Value = "60", @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SlotDuration, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-    
-        <div class="form-group">
-            <div class="form-group">
-                @Html.LabelFor(model => model.VisitingCard, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.Partial("_SingleFiles")
-                    @Html.HiddenFor(model => model.VisitingCard)
-                    <script>
-                        function preupload(event) {
-                            event.preventDefault();
-                            var files = $("#fileinput")[0].files;
-
-                            var url = '/Teachers/Upload';
-                            var imagepath = $("#VisitingCard");
-                            upload(files, url, imagepath);
-                        }
-                        function preclearfile(event) {
-                            var imagepath = $("#VisitingCard");
-                            clearfile(imagepath);
-                        }
-                    </script>
-                </div>
-            </div>
-        </div>
-
-  
-
-
-
-
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
